escape some curly braces & fix text overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body, html {
 	margin: 0;
+	padding: 0;
 	font-size: 18px;
 	font-family: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 
@@ -34,6 +35,7 @@ body, html {
 
 .main h2 {
 	line-height: 1.5em;
+	box-sizing: border-box;
 	padding: 0 0.5em;
 	margin: 0;
 
@@ -45,6 +47,7 @@ body, html {
 
 .theorem, .definition {
 	box-sizing: border-box;
+	padding: 0 .5em;
 	margin: 1em auto;
 
 	border: 1px solid #ddd;
@@ -52,16 +55,17 @@ body, html {
 }
 
 .theorem .content, .definition .content {
+	width: auto;
 	box-sizing: border-box;
-	margin: 0 .5rem;
 }
 
 .theorem .demonstration-content, .definition .demonstration-content {
+	box-sizing: border-box;
 	padding: 0 .5rem;
 }
 
 .theorem h2, .definition h2 {
-	
+	box-sizing: border-box;
 	padding: 0.5em .5rem .3em;
     margin: 0;
 
